k8s/grade-book-nodejs/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: gradebook-app
