k8s/grade-book-nodejs/02-deployment.yaml
# Mongodb Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: gradebook-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          emptyDir: {}

# NodeJS App Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: gradebook-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
        - name: nodeapp
          image: kevinjake/node-gradebook-app
          ports:
            - containerPort: 3000
      restartPolicy: Always
