k8s/grade-book-nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  selector:
    app: express-test
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
